# drvinceknight.github.com

./: .gitignore  .gitmodules  .travis.yml  CNAME  Convert data.ipynb  Gemfile  README.md  _config.yml  _footer.scss  build.py  collaborators.md  config.yml  cv.md  index.html  index.md  main.css  makefile  migrate.py  news.md  pyproject.toml  requirements.txt  software.md  students.md  style.scss  teaching.md
News/: index.html
_articles/: a-bibliometric-study-of-research-topics-collaboration-and-centrality-in-the-iterated-prisoners-dilemma.md  a-close-up-on-ambulance-service-estimation-in-indonesia-using-monte-carlo-simulation.md  a-conservative-index-heuristic-for-routing-problems-with-multiple-heterogeneous-service-facilities.md  a-game-theoretic-model-of-the-behavioural-gaming-that-takes-place-at-the-ems-ed-interface.md  a-novel-initialisation-based-on-hospital-resident-assignment-for-the-k-modes-algorithm.md  ambulance-allocation-for-maximal-survival-with-heterogeneous-outcome-measures.md  ambulance-allocations-for-maximising-survival-within-a-heterogeneous-population-using-a-heterogeneous-fleet.md  an-evolutionary-game-theoretic-model-for-devaluing-rhinos.md  an-open-framework-for-the-reproducible-study-of-the-iterated-prisoner’s-dilemma.md  bed-management-in-a-critical-care-unit.md  ciw-an-open-source-discrete-event-simulation-library.md  comparisons-between-observable-and-unobservable-m-m-1-queues-with-respect-to-optimal-customer-behavior.md  compliance-with-national-guidelines-for-stroke-in-radiology.md  extortionist-trade-policies-in-a-multipolar-world.md  (+47 more)
(+1215 files in other folders)
