[project]
name = "vknight-site"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "markdown>=3.7",
    "nbformat>=5.10",
    "networkx>=3.0",
    "numpy>=1.26",
    "pymdown-extensions>=10.0",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "scipy>=1.12",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
